fix overflow and more

--- a/baker/src/styles/blocks/c-hamburger.css
+++ b/baker/src/styles/blocks/c-hamburger.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   right: 5px;
   top: 15px;
-  z-index: 11;
+  z-index: 13;
   padding: 15px 15px;
   display: inline-block;
   cursor: pointer;
