--- a/baker/src/styles/blocks/c-header.css
+++ b/baker/src/styles/blocks/c-header.css
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  overflow-x: hidden;
 }
   .c-header:after {
     content: "";
@@ -30,7 +31,7 @@
     z-index: 9;
   }
 
-  .c-header__decocation-round {
+  .c-presentation__decocation-round {
     height: 70px;
     width: 70px;
     border-radius: 70px;
@@ -41,7 +42,7 @@
     left: 50%;
     transform: translate(-50%, 50%);
   }
-    .c-header__decocation-round:before {
+    .c-presentation__decocation-round:before {
       content: "";
       height: 90px;
       width: 90px;
