--- a/baker/src/styles/blocks/c-menu.css
+++ b/baker/src/styles/blocks/c-menu.css
@@ -9,9 +9,10 @@
   transform: translate(300%, -30%);
   background: rgba(5, 5, 5, .9);
   color: white;
-  z-index: 10;
+  z-index: 11;
   transition: all .2s;
   overflow: auto;
+  opacity: 0;
 }
   .c-menu__list {
     display: block;
@@ -38,6 +39,7 @@
 
 .h-menu_visible {
   transform: translate(0%);
+  opacity: 1;
 }
 
 
@@ -54,6 +56,7 @@
         background: transparent;
         width: auto;
         margin-left: auto;
+        opacity: 1;
       }
       .c-menu__list {
         flex-direction: row;
