--- a/baker/src/styles/blocks/l-presentation.css
+++ b/baker/src/styles/blocks/l-presentation.css
@@ -1,4 +1,30 @@
 .l-presentation {
   min-height: 500px;
   background: url('../../img/texture.jpg');
+  position: relative;
 }
+
+
+
+
+.c-presentation__decoration-round {
+  height: 70px;
+  width: 70px;
+  border-radius: 70px;
+  z-index: 10;
+  background: white 50% 62% url(../../img/cake-2.png) no-repeat;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+  .c-presentation__decoration-round:before {
+    content: "";
+    height: 90px;
+    width: 90px;
+    left: -10px;
+    top: -10px;
+    background: url(../../img/border-decor.png);
+    position: absolute;
+    background-size: contain;
+  }
